--- a/.github/workflows/wled-ci.yml
+++ b/.github/workflows/wled-ci.yml
@@ -30,7 +30,7 @@ jobs:
 
 
   build:
-    name: Build Enviornments
+    name: Build Environments
     runs-on: ubuntu-latest
     needs: get_default_envs
     strategy:
@@ -61,13 +61,13 @@ jobs:
       env:
         WLED_RELEASE: True
       run: pio run -e ${{ matrix.environment }}
-    - uses: actions/upload-artifact@v2
+    - uses: actions/upload-artifact@v4
       with:
         name: firmware-${{ matrix.environment }}
         path: |
           build_output/firmware/*.bin
           build_output/firmware/*.gz
-    - uses: actions/upload-artifact@v2
+    - uses: actions/upload-artifact@v4
       if: startsWith(github.ref, 'refs/tags/')
       with:
         name: firmware-release
