--- a/.github/workflows/wled-ci.yml
+++ b/.github/workflows/wled-ci.yml
@@ -24,6 +24,7 @@ jobs:
     - name: Get default environments
       id: envs
       run: |
+        echo "$(pio project config --json-output)"
         echo "environments=$(pio project config --json-output | jq -cr '.[0][1][0][1]')" >> $GITHUB_OUTPUT
     outputs:
       environments: ${{ steps.envs.outputs.environments }}
