--- a/platformio.ini
+++ b/platformio.ini
@@ -187,7 +187,9 @@ extra_scripts = ${scripts_defaults.extra_scripts}
 
 [esp32_idf_V4]
 platform = espressif32@5.3.0
-platform_packages =
+platform_packages = 
+  framework-arduinoespressif32@https://github.com/lucasgalton/esp32-arduino-lib-builder/releases/download/13/framework-arduinoespressif32-esp32-custom_eth-96e955827f.zip
+  framework-espidf@https://github.com/lucasgalton/esp-idf/releases/download/untagged-2fa1523d37a0888f35c2/esp-idf-v4.4.4-custom_eth1.zip
 build_flags = -g
   -Wshadow=compatible-local ;; emit warning in case a local variable "shadows" another local one
   -DARDUINO_ARCH_ESP32 -DESP32
