--- a/.github/workflows/wled-ci.yml
+++ b/.github/workflows/wled-ci.yml
@@ -62,6 +62,9 @@ jobs:
       env:
         WLED_RELEASE: True
       run: pio run -e ${{ matrix.environment }}
+    - name: Show files
+      if: always()
+      run: find .pio/
     - uses: actions/upload-artifact@v4
       with:
         name: firmware-${{ matrix.environment }}
